tests/Tokens/unclosed-string.bel
"hello

# RUN: %not %belalang build %s 2>&1 | %FileCheck %s
# CHECK: error: Unclosed string
# CHECK:  --> {{.*}}/tests/Tokens/unclosed-string.bel:1:1
# CHECK:   |
# CHECK: 1 | / {{.*}}hello
# CHECK: Error: compilation failed due to previous errors
